--- a/index.html
+++ b/index.html
@@ -68,21 +68,23 @@
   <h1>📊 אז למה תשמש המערכת?</h1>
   <p>ייעוד המערכת הוא לאפשר למנהלים ועובדים במלון גן עדן לקבל החלטות על בסיס נתוני המכירות בשנים האחרונות 🏨🌿</p>
 </header>
-
+  
 <section>
   <h2>👥 דשבורד עבור מנהלת השיווק</h2>
   <p>דשבורד זה נועד לשמש אותך כדי להתאים את אסטרטגיית השיווק של המלון – כולל פילוח גילאים ותפוסה חודשית.</p>
-  <iframe src="https://public.tableau.com/views/dashboard1_17534785656830/Dashboard1?:language=en-US&publish=yes&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link"></iframe>
-
+  <iframe src="https://public.tableau.com/views/dashboard1_17534785656830/Dashboard1?:showVizHome=no&:embed=true"></iframe>
+  
+<section>
   <h2>🏠 דשבורד עבור מנהל המלון</h2>
   <p>מציג ניתוח של סוגי חדרים מועדפים וממוצע אורחים בכל חדר – לקבלת החלטות ניהוליות חכמות.</p>
-  <iframe src="https://public.tableau.com/views/dashboard3_17534789232310/Dashboard3?:language=en-US&publish=yes&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link"></iframe>
-
+  <iframe src="https://public.tableau.com/views/dashboard3_17534789232310/Dashboard3?:showVizHome=no&:embed=true"></iframe>
+  
+<section>
   <h2>💳 דשבורד עבור בעלי המלון</h2>
   <p>מידע על העדפות תשלום של האורחים ופילוח רווחים לפי שנים וחודשים – לבחינה פיננסית.</p>
-  <iframe src="https://public.tableau.com/views/dashboard2_17534787959190/Dashboard2?:language=en-US&publish=yes&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link"></iframe>
-</section>
+  <iframe src="https://public.tableau.com/views/dashboard2_17534787959190/Dashboard2?:showVizHome=no&:embed=true"></iframe>
 
+</section>
 <footer>
   נבנה באהבה 🌸 על ידי צוות הנתונים של גן עדן | Tableau Public Integration
 </footer>
